--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,5 +1,6 @@
-= form_for :session do |f|
+= form_for @user do |f|
   = f.label :username
   = f.text_field :username
   = f.label :password
   = f.password_field :password
+  = f.submit
